@@ -27,7 +27,6 @@
 package sun.security.ssl;
 
 import java.io.*;
-import java.nio.*;
 import java.net.*;
 import java.security.GeneralSecurityException;
 import java.security.AccessController;
@@ -37,13 +36,12 @@ import java.security.AlgorithmConstraints;
 import java.util.*;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.locks.ReentrantLock;
-import java.util.function.BiFunction;
 
 import javax.crypto.BadPaddingException;
 import javax.net.ssl.*;
 
-import jdk.internal.misc.JavaNetInetAddressAccess;
-import jdk.internal.misc.SharedSecrets;
+import sun.misc.JavaNetAccess;
+import sun.misc.SharedSecrets;
 
 /**
  * Implementation of an SSL socket.  This is a normal connection type
@@ -64,7 +62,7 @@ import jdk.internal.misc.SharedSecrets;
  *
  * @author David Brownell
  */
-public final class SSLSocketImpl extends BaseSSLSocketImpl {
+final public class SSLSocketImpl extends BaseSSLSocketImpl {
 
     /*
      * ERROR HANDLING GUIDELINES
@@ -149,7 +147,7 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
      *                                     v
      *                                 APP_CLOSED
      *
-     * ALSO, note that the purpose of handshaking (renegotiation is
+     * ALSO, note that the the purpose of handshaking (renegotiation is
      * included) is to assign a different, and perhaps new, session to
      * the connection.  The SSLv3 spec is a bit confusing on that new
      * protocol feature.
@@ -159,14 +157,28 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
     private static final int    cs_DATA = 2;
     private static final int    cs_RENEGOTIATE = 3;
     private static final int    cs_ERROR = 4;
-    private static final int    cs_SENT_CLOSE = 5;
+    private static final int   cs_SENT_CLOSE = 5;
     private static final int    cs_CLOSED = 6;
     private static final int    cs_APP_CLOSED = 7;
+
+
+    /*
+     * Client authentication be off, requested, or required.
+     *
+     * Migrated to SSLEngineImpl:
+     *    clauth_none/cl_auth_requested/clauth_required
+     */
 
     /*
      * Drives the protocol state machine.
      */
     private volatile int        connectionState;
+
+    /*
+     * Flag indicating that the engine's handshaker has done the necessary
+     * steps so the engine may process a ChangeCipherSpec message.
+     */
+    private boolean             receivedCCS;
 
     /*
      * Flag indicating if the next record we receive MUST be a Finished
@@ -187,8 +199,7 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
      * Per-connection private state that doesn't change when the
      * session is changed.
      */
-    private ClientAuthType      doClientAuth =
-                                        ClientAuthType.CLIENT_AUTH_NONE;
+    private byte                doClientAuth;
     private boolean             roleIsServer;
     private boolean             enableSessionCreation = true;
     private String              host;
@@ -209,24 +220,11 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
                                     Collections.<SNIServerName>emptyList();
     Collection<SNIMatcher>      sniMatchers =
                                     Collections.<SNIMatcher>emptyList();
-
     // Is the serverNames set to empty with SSLParameters.setServerNames()?
     private boolean             noSniExtension = false;
 
     // Is the sniMatchers set to empty with SSLParameters.setSNIMatchers()?
     private boolean             noSniMatcher = false;
-
-    // Configured application protocol values
-    String[] applicationProtocols = new String[0];
-
-    // Negotiated application protocol value.
-    //
-    // The value under negotiation will be obtained from handshaker.
-    String applicationProtocol = null;
-
-    // Callback function that selects the application protocol value during
-    // the SSL/TLS handshake.
-    BiFunction<SSLSocket, List<String>, String> applicationProtocolSelector;
 
     /*
      * READ ME * READ ME * READ ME * READ ME * READ ME * READ ME *
@@ -293,18 +291,24 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
      * is created, at which time the new handshaker's state is set.
      *
      * The readLock is held during readRecord(), which is responsible
-     * for reading an SSLInputRecord, decrypting it, and processing it.
+     * for reading an InputRecord, decrypting it, and processing it.
      * The readLock ensures that these three steps are done atomically
-     * and that once started, no other thread can block on SSLInputRecord.read.
+     * and that once started, no other thread can block on InputRecord.read.
      * This is necessary so that processing of close_notify alerts
      * from the peer are handled properly.
      */
-    private final Object        handshakeLock = new Object();
+    final private Object        handshakeLock = new Object();
     final ReentrantLock         writeLock = new ReentrantLock();
-    private final Object        readLock = new Object();
+    final private Object        readLock = new Object();
 
-    InputRecord                 inputRecord;
-    OutputRecord                outputRecord;
+    private InputRecord         inrec;
+
+    /*
+     * Crypto state that's reinitialized when the session changes.
+     */
+    private Authenticator       readAuthenticator, writeAuthenticator;
+    private CipherBox           readCipher, writeCipher;
+    // NOTE: compression state would be saved here
 
     /*
      * security parameters for secure renegotiation.
@@ -371,21 +375,27 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
     /*
      * The SSL version associated with this connection.
      */
-    private ProtocolVersion     protocolVersion = ProtocolVersion.DEFAULT_TLS;
+    private ProtocolVersion     protocolVersion = ProtocolVersion.DEFAULT;
 
     /* Class and subclass dynamic debugging support */
     private static final Debug debug = Debug.getInstance("ssl");
+
+    /*
+     * Is it the first application record to write?
+     */
+    private boolean isFirstAppOutputRecord = true;
+
+    /*
+     * If AppOutputStream needs to delay writes of small packets, we
+     * will use this to store the data until we actually do the write.
+     */
+    private ByteArrayOutputStream heldRecordBuffer = null;
 
     /*
      * Whether local cipher suites preference in server side should be
      * honored during handshaking?
      */
     private boolean preferLocalCipherSuites = false;
-
-    /*
-     * The maximum expected network packet size for SSL/TLS/DTLS records.
-     */
-    private int maximumPacketSize = 0;
 
     /*
      * Is the local name service trustworthy?
@@ -497,13 +507,12 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
      * giving control over the use of SSL client authentication.
      */
     SSLSocketImpl(SSLContextImpl context, boolean serverMode,
-            CipherSuiteList suites, ClientAuthType clientAuth,
+            CipherSuiteList suites, byte clientAuth,
             boolean sessionCreation, ProtocolList protocols,
             String identificationProtocol,
             AlgorithmConstraints algorithmConstraints,
             Collection<SNIMatcher> sniMatchers,
-            boolean preferLocalCipherSuites,
-            String[] applicationProtocols) throws IOException {
+            boolean preferLocalCipherSuites) throws IOException {
 
         super();
         doClientAuth = clientAuth;
@@ -512,7 +521,6 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
         this.algorithmConstraints = algorithmConstraints;
         this.sniMatchers = sniMatchers;
         this.preferLocalCipherSuites = preferLocalCipherSuites;
-        this.applicationProtocols = applicationProtocols;
         init(context, serverMode);
 
         /*
@@ -602,6 +610,17 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
          */
         roleIsServer = isServer;
         connectionState = cs_START;
+        receivedCCS = false;
+
+        /*
+         * default read and write side cipher and MAC support
+         *
+         * Note:  compression support would go here too
+         */
+        readCipher = CipherBox.NULL;
+        readAuthenticator = MAC.NULL;
+        writeCipher = CipherBox.NULL;
+        writeAuthenticator = MAC.NULL;
 
         // initial security parameters for secure renegotiation
         secureRenegotiation = false;
@@ -613,10 +632,7 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
         enabledProtocols =
                 sslContext.getDefaultProtocolList(roleIsServer);
 
-        inputRecord = new SSLSocketInputRecord();;
-        outputRecord = new SSLSocketOutputRecord();
-
-        maximumPacketSize = outputRecord.getMaxPacketSize();
+        inrec = null;
 
         // save the acc
         acc = AccessController.getContext();
@@ -677,9 +693,6 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
         sockInput = super.getInputStream();
         sockOutput = super.getOutputStream();
 
-        inputRecord.setDeliverStream(sockOutput);
-        outputRecord.setDeliverStream(sockOutput);
-
         /*
          * Move to handshaking state, with pending session initialized
          * to defaults and the appropriate kind of handshaker set up.
@@ -687,11 +700,11 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
         initHandshaker();
     }
 
-    private synchronized int getConnectionState() {
+    synchronized private int getConnectionState() {
         return connectionState;
     }
 
-    private synchronized void setConnectionState(int state) {
+    synchronized private void setConnectionState(int state) {
         connectionState = state;
     }
 
@@ -704,18 +717,29 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
     //
 
     /*
-     * Application data record output.
+     * AppOutputStream calls may need to buffer multiple outbound
+     * application packets.
      *
-     * Application data can't be sent until the first handshake establishes
-     * a session.
+     * All other writeRecord() calls will not buffer, so do not hold
+     * these records.
      */
-    void writeRecord(byte[] source, int offset, int length) throws IOException {
+    void writeRecord(OutputRecord r) throws IOException {
+        writeRecord(r, false);
+    }
+
+    /*
+     * Record Output. Application data can't be sent until the first
+     * handshake establishes a session.
+     *
+     * NOTE:  we let empty records be written as a hook to force some
+     * TCP-level activity, notably handshaking, to occur.
+     */
+    void writeRecord(OutputRecord r, boolean holdRecord) throws IOException {
         /*
          * The loop is in case of HANDSHAKE --> ERROR transitions, etc
          */
-        // Don't bother to check the emptiness of source applicatoin data
-        // before the security connection established.
-        for (boolean readyForApp = false; !readyForApp;) {
+    loop:
+        while (r.contentType() == Record.ct_application_data) {
             /*
              * Not all states support passing application data.  We
              * synchronize access to the connection state, so that
@@ -723,43 +747,41 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
              */
             switch (getConnectionState()) {
 
-                /*
-                 * We've deferred the initial handshaking till just now,
-                 * when presumably a thread's decided it's OK to block for
-                 * longish periods of time for I/O purposes (as well as
-                 * configured the cipher suites it wants to use).
-                 */
-                case cs_HANDSHAKE:
-                    performInitialHandshake();
-                    break;
+            /*
+             * We've deferred the initial handshaking till just now,
+             * when presumably a thread's decided it's OK to block for
+             * longish periods of time for I/O purposes (as well as
+             * configured the cipher suites it wants to use).
+             */
+            case cs_HANDSHAKE:
+                performInitialHandshake();
+                break;
 
-                case cs_DATA:
-                case cs_RENEGOTIATE:
-                    readyForApp = true;
-                    break;
+            case cs_DATA:
+            case cs_RENEGOTIATE:
+                break loop;
 
-                case cs_ERROR:
-                    fatal(Alerts.alert_close_notify,
-                            "error while writing to socket");
-                    break; // dummy
+            case cs_ERROR:
+                fatal(Alerts.alert_close_notify,
+                    "error while writing to socket");
+                break; // dummy
 
-                case cs_SENT_CLOSE:
-                case cs_CLOSED:
-                case cs_APP_CLOSED:
-                    // we should never get here (check in AppOutputStream)
-                    // this is just a fallback
-                    if (closeReason != null) {
-                        throw closeReason;
-                    } else {
-                        throw new SocketException("Socket closed");
-                    }
+            case cs_SENT_CLOSE:
+            case cs_CLOSED:
+            case cs_APP_CLOSED:
+                // we should never get here (check in AppOutputStream)
+                // this is just a fallback
+                if (closeReason != null) {
+                    throw closeReason;
+                } else {
+                    throw new SocketException("Socket closed");
+                }
 
-                /*
-                 * Else something's goofy in this state machine's use.
-                 */
-                default:
-                    throw new SSLProtocolException(
-                            "State error, send app data");
+            /*
+             * Else something's goofy in this state machine's use.
+             */
+            default:
+                throw new SSLProtocolException("State error, send app data");
             }
         }
 
@@ -771,29 +793,97 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
         // implementations are fragile and don't like to see empty
         // records, so this also increases robustness.
         //
-        if (length > 0) {
-            IOException ioe = null;
-            byte description = 0;    // 0: never used, make the compiler happy
-            writeLock.lock();
-            try {
-                outputRecord.deliver(source, offset, length);
-            } catch (SSLHandshakeException she) {
-                // may be record sequence number overflow
-                description = Alerts.alert_handshake_failure;
-                ioe = she;
-            } catch (IOException e) {
-                description = Alerts.alert_unexpected_message;
-                ioe = e;
-            } finally {
-                writeLock.unlock();
-            }
+        if (!r.isEmpty()) {
 
-            // Be care of deadlock. Please don't place the call to fatal()
-            // into the writeLock locked block.
-            if (ioe != null) {
-                fatal(description, ioe);
+            // If the record is a close notify alert, we need to honor
+            // socket option SO_LINGER. Note that we will try to send
+            // the close notify even if the SO_LINGER set to zero.
+            if (r.isAlert(Alerts.alert_close_notify) && getSoLinger() >= 0) {
+
+                // keep and clear the current thread interruption status.
+                boolean interrupted = Thread.interrupted();
+                try {
+                    if (writeLock.tryLock(getSoLinger(), TimeUnit.SECONDS)) {
+                        try {
+                            writeRecordInternal(r, holdRecord);
+                        } finally {
+                            writeLock.unlock();
+                        }
+                    } else {
+                        SSLException ssle = new SSLException(
+                                "SO_LINGER timeout," +
+                                " close_notify message cannot be sent.");
+
+
+                        // For layered, non-autoclose sockets, we are not
+                        // able to bring them into a usable state, so we
+                        // treat it as fatal error.
+                        if (isLayered() && !autoClose) {
+                            // Note that the alert description is
+                            // specified as -1, so no message will be send
+                            // to peer anymore.
+                            fatal((byte)(-1), ssle);
+                        } else if ((debug != null) && Debug.isOn("ssl")) {
+                            System.out.println(
+                                Thread.currentThread().getName() +
+                                ", received Exception: " + ssle);
+                        }
+
+                        // RFC2246 requires that the session becomes
+                        // unresumable if any connection is terminated
+                        // without proper close_notify messages with
+                        // level equal to warning.
+                        //
+                        // RFC4346 no longer requires that a session not be
+                        // resumed if failure to properly close a connection.
+                        //
+                        // We choose to make the session unresumable if
+                        // failed to send the close_notify message.
+                        //
+                        sess.invalidate();
+                    }
+                } catch (InterruptedException ie) {
+                    // keep interrupted status
+                    interrupted = true;
+                }
+
+                // restore the interrupted status
+                if (interrupted) {
+                    Thread.currentThread().interrupt();
+                }
+            } else {
+                writeLock.lock();
+                try {
+                    writeRecordInternal(r, holdRecord);
+                } finally {
+                    writeLock.unlock();
+                }
             }
         }
+    }
+
+    private void writeRecordInternal(OutputRecord r,
+            boolean holdRecord) throws IOException {
+
+        // r.compress(c);
+        r.encrypt(writeAuthenticator, writeCipher);
+
+        if (holdRecord) {
+            // If we were requested to delay the record due to possibility
+            // of Nagle's being active when finally got to writing, and
+            // it's actually not, we don't really need to delay it.
+            if (getTcpNoDelay()) {
+                holdRecord = false;
+            } else {
+                // We need to hold the record, so let's provide
+                // a per-socket place to do it.
+                if (heldRecordBuffer == null) {
+                    // Likely only need 37 bytes.
+                    heldRecordBuffer = new ByteArrayOutputStream(40);
+                }
+            }
+        }
+        r.write(sockOutput, holdRecord, heldRecordBuffer);
 
         /*
          * Check the sequence number state
@@ -805,173 +895,51 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
          * when there is enough sequence number space left to
          * handle a few more records, so the sequence number
          * of the last record cannot be wrapped.
-         *
-         * Don't bother to kickstart the renegotiation when the
-         * local is asking for it.
          */
-        if ((connectionState == cs_DATA) && outputRecord.seqNumIsHuge()) {
-            /*
-             * Ask for renegotiation when need to renew sequence number.
-             *
-             * Don't bother to kickstart the renegotiation when the local is
-             * asking for it.
-             */
-            if (debug != null && Debug.isOn("ssl")) {
-                System.out.println(Thread.currentThread().getName() +
-                        ", request renegotiation " +
-                        "to avoid sequence number overflow");
-            }
+        if (connectionState < cs_ERROR) {
+            checkSequenceNumber(writeAuthenticator, r.contentType());
+        }
 
-            startHandshake();
+        // turn off the flag of the first application record
+        if (isFirstAppOutputRecord &&
+                r.contentType() == Record.ct_application_data) {
+            isFirstAppOutputRecord = false;
         }
     }
 
     /*
-     * Alert record output.
+     * Need to split the payload except the following cases:
+     *
+     * 1. protocol version is TLS 1.1 or later;
+     * 2. bulk cipher does not use CBC mode, including null bulk cipher suites.
+     * 3. the payload is the first application record of a freshly
+     *    negotiated TLS session.
+     * 4. the CBC protection is disabled;
+     *
+     * More details, please refer to AppOutputStream.write(byte[], int, int).
      */
-    void writeAlert(byte level, byte description) throws IOException {
-
-        // If the record is a close notify alert, we need to honor
-        // socket option SO_LINGER. Note that we will try to send
-        // the close notify even if the SO_LINGER set to zero.
-        if ((description == Alerts.alert_close_notify) && getSoLinger() >= 0) {
-
-            // keep and clear the current thread interruption status.
-            boolean interrupted = Thread.interrupted();
-            try {
-                if (writeLock.tryLock(getSoLinger(), TimeUnit.SECONDS)) {
-                    try {
-                        outputRecord.encodeAlert(level, description);
-                    } finally {
-                        writeLock.unlock();
-                    }
-                } else {
-                    SSLException ssle = new SSLException(
-                            "SO_LINGER timeout," +
-                            " close_notify message cannot be sent.");
-
-
-                    // For layered, non-autoclose sockets, we are not
-                    // able to bring them into a usable state, so we
-                    // treat it as fatal error.
-                    if (isLayered() && !autoClose) {
-                        // Note that the alert description is
-                        // specified as -1, so no message will be send
-                        // to peer anymore.
-                        fatal((byte)(-1), ssle);
-                    } else if ((debug != null) && Debug.isOn("ssl")) {
-                        System.out.println(
-                            Thread.currentThread().getName() +
-                            ", received Exception: " + ssle);
-                    }
-
-                    // RFC2246 requires that the session becomes
-                    // unresumable if any connection is terminated
-                    // without proper close_notify messages with
-                    // level equal to warning.
-                    //
-                    // RFC4346 no longer requires that a session not be
-                    // resumed if failure to properly close a connection.
-                    //
-                    // We choose to make the session unresumable if
-                    // failed to send the close_notify message.
-                    //
-                    sess.invalidate();
-                }
-            } catch (InterruptedException ie) {
-                // keep interrupted status
-                interrupted = true;
-            }
-
-            // restore the interrupted status
-            if (interrupted) {
-                Thread.currentThread().interrupt();
-            }
-        } else {
-            writeLock.lock();
-            try {
-                outputRecord.encodeAlert(level, description);
-            } finally {
-                writeLock.unlock();
-            }
+    boolean needToSplitPayload() {
+        writeLock.lock();
+        try {
+            return (protocolVersion.v <= ProtocolVersion.TLS10.v) &&
+                    writeCipher.isCBCMode() && !isFirstAppOutputRecord &&
+                    Record.enableCBCProtection;
+        } finally {
+            writeLock.unlock();
         }
-
-        // Don't bother to check sequence number overlap here.  If sequence
-        // number is huge, there should be enough sequence number space to
-        // request renegotiation in next application data read and write.
     }
 
-
-    int bytesInCompletePacket() throws IOException {
+    /*
+     * Read an application data record.  Alerts and handshake
+     * messages are handled directly.
+     */
+    void readDataRecord(InputRecord r) throws IOException {
         if (getConnectionState() == cs_HANDSHAKE) {
             performInitialHandshake();
         }
-
-        synchronized (readLock) {
-            int state = getConnectionState();
-            if ((state == cs_CLOSED) ||
-                    (state == cs_ERROR) || (state == cs_APP_CLOSED)) {
-                return -1;
-            }
-
-            try {
-                return inputRecord.bytesInCompletePacket(sockInput);
-            } catch (EOFException eofe) {
-                boolean handshaking = (connectionState <= cs_HANDSHAKE);
-                boolean rethrow = requireCloseNotify || handshaking;
-                if ((debug != null) && Debug.isOn("ssl")) {
-                    System.out.println(Thread.currentThread().getName() +
-                        ", received EOFException: "
-                        + (rethrow ? "error" : "ignored"));
-                }
-
-                if (!rethrow) {
-                    // treat as if we had received a close_notify
-                    closeInternal(false);
-                } else {
-                    SSLException e;
-                    if (handshaking) {
-                        e = new SSLHandshakeException(
-                            "Remote host terminated the handshake");
-                    } else {
-                        e = new SSLProtocolException(
-                            "Remote host terminated the handshake");
-                    }
-                    e.initCause(eofe);
-                    throw e;
-                }
-            }
-
-            return -1;
-        }
+        readRecord(r, true);
     }
 
-    // the caller have synchronized readLock
-    void expectingFinishFlight() {
-        inputRecord.expectingFinishFlight();
-    }
-
-    /*
-     * Read an application data record.
-     *
-     * Alerts and handshake messages are internally handled directly.
-     */
-    int readRecord(ByteBuffer buffer) throws IOException {
-        if (getConnectionState() == cs_HANDSHAKE) {
-            performInitialHandshake();
-        }
-
-        return readRecord(buffer, true);
-    }
-
-    /*
-     * Read a record, no application data input required.
-     *
-     * Alerts and handshake messages are internally handled directly.
-     */
-    int readRecord(boolean needAppData) throws IOException {
-        return readRecord(null, needAppData);
-    }
 
     /*
      * Clear the pipeline of records from the peer, optionally returning
@@ -982,11 +950,11 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
      * Don't synchronize (this) during a blocking read() since it
      * protects data which is accessed on the write side as well.
      */
-    private int readRecord(ByteBuffer buffer, boolean needAppData)
+    private void readRecord(InputRecord r, boolean needAppData)
             throws IOException {
         int state;
 
-        // readLock protects reading and processing of an SSLInputRecord.
+        // readLock protects reading and processing of an InputRecord.
         // It keeps the reading from sockInput and processing of the record
         // atomic so that no two threads can be blocked on the
         // read from the same input stream at the same time.
@@ -997,287 +965,294 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
         //
         // Use readLock instead of 'this' for locking because
         // 'this' also protects data accessed during writing.
-        synchronized (readLock) {
+      synchronized (readLock) {
+        /*
+         * Read and handle records ... return application data
+         * ONLY if it's needed.
+         */
+
+        while (((state = getConnectionState()) != cs_CLOSED) &&
+                (state != cs_ERROR) && (state != cs_APP_CLOSED)) {
             /*
-             * Read and handle records ... return application data
-             * ONLY if it's needed.
+             * Read a record ... maybe emitting an alert if we get a
+             * comprehensible but unsupported "hello" message during
+             * format checking (e.g. V2).
              */
-            Plaintext plainText = null;
-            while (((state = getConnectionState()) != cs_CLOSED) &&
-                    (state != cs_ERROR) && (state != cs_APP_CLOSED)) {
-
-                /*
-                 * clean the buffer and check if it is too small, e.g. because
-                 * the AppInputStream did not have the chance to see the
-                 * current packet length but rather something like that of the
-                 * handshake before. In that case we return 0 at this point to
-                 * give the caller the chance to adjust the buffer.
-                 */
-                if (buffer != null) {
-                    buffer.clear();
-
-                    if (buffer.remaining() <
-                            inputRecord.bytesInCompletePacket(sockInput)) {
-                        return 0;
-                    }
-                }
-
-                /*
-                 * Read a record ... maybe emitting an alert if we get a
-                 * comprehensible but unsupported "hello" message during
-                 * format checking (e.g. V2).
-                 */
+            try {
+                r.setAppDataValid(false);
+                r.read(sockInput, sockOutput);
+            } catch (SSLProtocolException e) {
                 try {
-                    plainText = inputRecord.decode(sockInput, buffer);
-                } catch (BadPaddingException bpe) {
-                    byte alertType = (state != cs_DATA) ?
-                            Alerts.alert_handshake_failure :
-                            Alerts.alert_bad_record_mac;
-                    fatal(alertType, bpe.getMessage(), bpe);
-                } catch (SSLProtocolException spe) {
-                    try {
-                        fatal(Alerts.alert_unexpected_message, spe);
-                    } catch (IOException x) {
-                        // discard this exception, throw the original exception
-                    }
-                    throw spe;
-                } catch (SSLHandshakeException she) {
-                    // may be record sequence number overflow
-                    fatal(Alerts.alert_handshake_failure, she);
-                } catch (EOFException eof) {
-                    boolean handshaking = (connectionState <= cs_HANDSHAKE);
-                    boolean rethrow = requireCloseNotify || handshaking;
-                    if ((debug != null) && Debug.isOn("ssl")) {
-                        System.out.println(Thread.currentThread().getName() +
-                            ", received EOFException: "
-                            + (rethrow ? "error" : "ignored"));
-                    }
-                    if (rethrow) {
-                        SSLException e;
-                        if (handshaking) {
-                            e = new SSLHandshakeException(
-                                    "Remote host terminated the handshake");
-                        } else {
-                            e = new SSLProtocolException(
-                                    "Remote host terminated the connection");
-                        }
-                        e.initCause(eof);
-                        throw e;
+                    fatal(Alerts.alert_unexpected_message, e);
+                } catch (IOException x) {
+                    // discard this exception
+                }
+                throw e;
+            } catch (EOFException eof) {
+                boolean handshaking = (getConnectionState() <= cs_HANDSHAKE);
+                boolean rethrow = requireCloseNotify || handshaking;
+                if ((debug != null) && Debug.isOn("ssl")) {
+                    System.out.println(Thread.currentThread().getName() +
+                        ", received EOFException: "
+                        + (rethrow ? "error" : "ignored"));
+                }
+                if (rethrow) {
+                    SSLException e;
+                    if (handshaking) {
+                        e = new SSLHandshakeException
+                            ("Remote host closed connection during handshake");
                     } else {
-                        // treat as if we had received a close_notify
-                        closeInternal(false);
+                        e = new SSLProtocolException
+                            ("Remote host closed connection incorrectly");
+                    }
+                    e.initCause(eof);
+                    throw e;
+                } else {
+                    // treat as if we had received a close_notify
+                    closeInternal(false);
+                    continue;
+                }
+            }
+
+
+            /*
+             * The basic SSLv3 record protection involves (optional)
+             * encryption for privacy, and an integrity check ensuring
+             * data origin authentication.  We do them both here, and
+             * throw a fatal alert if the integrity check fails.
+             */
+            try {
+                r.decrypt(readAuthenticator, readCipher);
+            } catch (BadPaddingException e) {
+                byte alertType = (r.contentType() == Record.ct_handshake)
+                                        ? Alerts.alert_handshake_failure
+                                        : Alerts.alert_bad_record_mac;
+                fatal(alertType, e.getMessage(), e);
+            }
+
+            // if (!r.decompress(c))
+            //     fatal(Alerts.alert_decompression_failure,
+            //         "decompression failure");
+
+            /*
+             * Process the record.
+             */
+            synchronized (this) {
+              switch (r.contentType()) {
+                case Record.ct_handshake:
+                    /*
+                     * Handshake messages always go to a pending session
+                     * handshaker ... if there isn't one, create one.  This
+                     * must work asynchronously, for renegotiation.
+                     *
+                     * NOTE that handshaking will either resume a session
+                     * which was in the cache (and which might have other
+                     * connections in it already), or else will start a new
+                     * session (new keys exchanged) with just this connection
+                     * in it.
+                     */
+                    initHandshaker();
+                    if (!handshaker.activated()) {
+                        // prior to handshaking, activate the handshake
+                        if (connectionState == cs_RENEGOTIATE) {
+                            // don't use SSLv2Hello when renegotiating
+                            handshaker.activate(protocolVersion);
+                        } else {
+                            handshaker.activate(null);
+                        }
+                    }
+
+                    /*
+                     * process the handshake record ... may contain just
+                     * a partial handshake message or multiple messages.
+                     *
+                     * The handshaker state machine will ensure that it's
+                     * a finished message.
+                     */
+                    handshaker.process_record(r, expectingFinished);
+                    expectingFinished = false;
+
+                    if (handshaker.invalidated) {
+                        handshaker = null;
+                        receivedCCS = false;
+                        // if state is cs_RENEGOTIATE, revert it to cs_DATA
+                        if (connectionState == cs_RENEGOTIATE) {
+                            connectionState = cs_DATA;
+                        }
+                    } else if (handshaker.isDone()) {
+                        // reset the parameters for secure renegotiation.
+                        secureRenegotiation =
+                                        handshaker.isSecureRenegotiation();
+                        clientVerifyData = handshaker.getClientVerifyData();
+                        serverVerifyData = handshaker.getServerVerifyData();
+
+                        sess = handshaker.getSession();
+                        handshakeSession = null;
+                        handshaker = null;
+                        connectionState = cs_DATA;
+                        receivedCCS = false;
+
+                        //
+                        // Tell folk about handshake completion, but do
+                        // it in a separate thread.
+                        //
+                        if (handshakeListeners != null) {
+                            HandshakeCompletedEvent event =
+                                new HandshakeCompletedEvent(this, sess);
+
+                            Thread t = new NotifyHandshakeThread(
+                                handshakeListeners.entrySet(), event);
+                            t.start();
+                        }
+                    }
+
+                    if (needAppData || connectionState != cs_DATA) {
                         continue;
                     }
-                }
+                    break;
 
-                // PlainText should never be null. Process input record.
-                int volume = processInputRecord(plainText, needAppData);
+                case Record.ct_application_data:
+                    // Pass this right back up to the application.
+                    if (connectionState != cs_DATA
+                            && connectionState != cs_RENEGOTIATE
+                            && connectionState != cs_SENT_CLOSE) {
+                        throw new SSLProtocolException(
+                            "Data received in non-data state: " +
+                            connectionState);
+                    }
+                    if (expectingFinished) {
+                        throw new SSLProtocolException
+                                ("Expecting finished message, received data");
+                    }
+                    if (!needAppData) {
+                        throw new SSLException("Discarding app data");
+                    }
 
-                if (plainText.contentType == Record.ct_application_data) {
-                    return volume;
-                }
+                    r.setAppDataValid(true);
+                    break;
 
-                if (plainText.contentType == Record.ct_handshake) {
-                    if (!needAppData && connectionState == cs_DATA) {
-                        return volume;
-                    }   // otherwise, need to read more for app data.
-                }
+                case Record.ct_alert:
+                    recvAlert(r);
+                    continue;
 
-                // continue to read more net data
-            }   // while
+                case Record.ct_change_cipher_spec:
+                    if ((connectionState != cs_HANDSHAKE
+                                && connectionState != cs_RENEGOTIATE)
+                            || !handshaker.sessionKeysCalculated()
+                            || receivedCCS) {
+                        // For the CCS message arriving in the wrong state
+                        fatal(Alerts.alert_unexpected_message,
+                                "illegal change cipher spec msg, conn state = "
+                                + connectionState + ", handshake state = "
+                                + handshaker.state);
+                    } else if (r.available() != 1 || r.read() != 1) {
+                        // For structural/content issues with the CCS
+                        fatal(Alerts.alert_unexpected_message,
+                                "Malformed change cipher spec msg");
+                    }
 
-            //
-            // couldn't read, due to some kind of error
-            //
-            return -1;
-        }  // readLock synchronization
+                    // Once we've received CCS, update the flag.
+                    // If the remote endpoint sends it again in this handshake
+                    // we won't process it.
+                    receivedCCS = true;
+
+                    //
+                    // The first message after a change_cipher_spec
+                    // record MUST be a "Finished" handshake record,
+                    // else it's a protocol violation.  We force this
+                    // to be checked by a minor tweak to the state
+                    // machine.
+                    //
+                    changeReadCiphers();
+                    // next message MUST be a finished message
+                    expectingFinished = true;
+                    continue;
+
+                default:
+                    //
+                    // TLS requires that unrecognized records be ignored.
+                    //
+                    if (debug != null && Debug.isOn("ssl")) {
+                        System.out.println(Thread.currentThread().getName() +
+                            ", Received record type: "
+                            + r.contentType());
+                    }
+                    continue;
+              } // switch
+
+              /*
+               * Check the sequence number state
+               *
+               * Note that in order to maintain the connection I/O
+               * properly, we check the sequence number after the last
+               * record reading process. As we request renegotiation
+               * or close the connection for wrapped sequence number
+               * when there is enough sequence number space left to
+               * handle a few more records, so the sequence number
+               * of the last record cannot be wrapped.
+               */
+              if (connectionState < cs_ERROR) {
+                  checkSequenceNumber(readAuthenticator, r.contentType());
+              }
+
+              return;
+            } // synchronized (this)
+        }
+
+        //
+        // couldn't read, due to some kind of error
+        //
+        r.close();
+        return;
+      }  // synchronized (readLock)
     }
 
-    /*
-     * Process the plainText input record.
+    /**
+     * Check the sequence number state
+     *
+     * RFC 4346 states that, "Sequence numbers are of type uint64 and
+     * may not exceed 2^64-1.  Sequence numbers do not wrap. If a TLS
+     * implementation would need to wrap a sequence number, it must
+     * renegotiate instead."
      */
-    private synchronized int processInputRecord(
-            Plaintext plainText, boolean needAppData) throws IOException {
+    private void checkSequenceNumber(Authenticator authenticator, byte type)
+            throws IOException {
 
         /*
-         * Process the record.
+         * Don't bother to check the sequence number for error or
+         * closed connections, or NULL MAC.
          */
-        int volume = 0;    // no application data
-        switch (plainText.contentType) {
-            case Record.ct_handshake:
-                /*
-                 * Handshake messages always go to a pending session
-                 * handshaker ... if there isn't one, create one.  This
-                 * must work asynchronously, for renegotiation.
-                 *
-                 * NOTE that handshaking will either resume a session
-                 * which was in the cache (and which might have other
-                 * connections in it already), or else will start a new
-                 * session (new keys exchanged) with just this connection
-                 * in it.
-                 */
-                initHandshaker();
-                if (!handshaker.activated()) {
-                    // prior to handshaking, activate the handshake
-                    if (connectionState == cs_RENEGOTIATE) {
-                        // don't use SSLv2Hello when renegotiating
-                        handshaker.activate(protocolVersion);
-                    } else {
-                        handshaker.activate(null);
-                    }
-                }
-
-                /*
-                 * process the handshake record ... may contain just
-                 * a partial handshake message or multiple messages.
-                 *
-                 * The handshaker state machine will ensure that it's
-                 * a finished message.
-                 */
-                handshaker.processRecord(plainText.fragment, expectingFinished);
-                expectingFinished = false;
-
-                if (handshaker.invalidated) {
-                    handshaker = null;
-                    inputRecord.setHandshakeHash(null);
-                    outputRecord.setHandshakeHash(null);
-
-                    // if state is cs_RENEGOTIATE, revert it to cs_DATA
-                    if (connectionState == cs_RENEGOTIATE) {
-                        connectionState = cs_DATA;
-                    }
-                } else if (handshaker.isDone()) {
-                    // reset the parameters for secure renegotiation.
-                    secureRenegotiation =
-                                    handshaker.isSecureRenegotiation();
-                    clientVerifyData = handshaker.getClientVerifyData();
-                    serverVerifyData = handshaker.getServerVerifyData();
-                    // set connection ALPN value
-                    applicationProtocol =
-                        handshaker.getHandshakeApplicationProtocol();
-
-                    sess = handshaker.getSession();
-                    handshakeSession = null;
-                    handshaker = null;
-                    inputRecord.setHandshakeHash(null);
-                    outputRecord.setHandshakeHash(null);
-                    connectionState = cs_DATA;
-
-                    //
-                    // Tell folk about handshake completion, but do
-                    // it in a separate thread.
-                    //
-                    if (handshakeListeners != null) {
-                        HandshakeCompletedEvent event =
-                            new HandshakeCompletedEvent(this, sess);
-
-                        Thread thread = new Thread(
-                            null,
-                            new NotifyHandshake(
-                                handshakeListeners.entrySet(), event),
-                            "HandshakeCompletedNotify-Thread",
-                            0,
-                            false);
-                        thread.start();
-                    }
-                }
-
-                break;
-
-            case Record.ct_application_data:
-                if (connectionState != cs_DATA
-                        && connectionState != cs_RENEGOTIATE
-                        && connectionState != cs_SENT_CLOSE) {
-                    throw new SSLProtocolException(
-                        "Data received in non-data state: " +
-                        connectionState);
-                }
-                if (expectingFinished) {
-                    throw new SSLProtocolException
-                            ("Expecting finished message, received data");
-                }
-                if (!needAppData) {
-                    throw new SSLException("Discarding app data");
-                }
-
-                volume = plainText.fragment.remaining();
-                break;
-
-            case Record.ct_alert:
-                recvAlert(plainText.fragment);
-                break;
-
-            case Record.ct_change_cipher_spec:
-                if ((connectionState != cs_HANDSHAKE
-                        && connectionState != cs_RENEGOTIATE)) {
-                    // For the CCS message arriving in the wrong state
-                    fatal(Alerts.alert_unexpected_message,
-                            "illegal change cipher spec msg, conn state = "
-                            + connectionState);
-                } else if (plainText.fragment.remaining() != 1
-                        || plainText.fragment.get() != 1) {
-                    // For structural/content issues with the CCS
-                    fatal(Alerts.alert_unexpected_message,
-                            "Malformed change cipher spec msg");
-                }
-
-                //
-                // The first message after a change_cipher_spec
-                // record MUST be a "Finished" handshake record,
-                // else it's a protocol violation.  We force this
-                // to be checked by a minor tweak to the state
-                // machine.
-                //
-                handshaker.receiveChangeCipherSpec();
-
-                CipherBox readCipher;
-                Authenticator readAuthenticator;
-                try {
-                    readCipher = handshaker.newReadCipher();
-                    readAuthenticator = handshaker.newReadAuthenticator();
-                } catch (GeneralSecurityException e) {
-                    // can't happen
-                    throw new SSLException("Algorithm missing:  ", e);
-                }
-                inputRecord.changeReadCiphers(readAuthenticator, readCipher);
-
-                // next message MUST be a finished message
-                expectingFinished = true;
-
-                break;
-
-            default:
-                //
-                // TLS requires that unrecognized records be ignored.
-                //
-                if (debug != null && Debug.isOn("ssl")) {
-                    System.out.println(Thread.currentThread().getName() +
-                        ", Received record type: " + plainText.contentType);
-                }
-                break;
+        if (connectionState >= cs_ERROR || authenticator == MAC.NULL) {
+            return;
         }
 
         /*
-         * Check the sequence number state
-         *
-         * Note that in order to maintain the connection I/O
-         * properly, we check the sequence number after the last
-         * record reading process. As we request renegotiation
-         * or close the connection for wrapped sequence number
-         * when there is enough sequence number space left to
-         * handle a few more records, so the sequence number
-         * of the last record cannot be wrapped.
-         *
-         * Don't bother to kickstart the renegotiation when the
-         * local is asking for it.
+         * Conservatively, close the connection immediately when the
+         * sequence number is close to overflow
          */
-        if ((connectionState == cs_DATA) && inputRecord.seqNumIsHuge()) {
+        if (authenticator.seqNumOverflow()) {
             /*
-             * Ask for renegotiation when need to renew sequence number.
-             *
-             * Don't bother to kickstart the renegotiation when the local is
-             * asking for it.
+             * TLS protocols do not define a error alert for sequence
+             * number overflow. We use handshake_failure error alert
+             * for handshaking and bad_record_mac for other records.
              */
+            if (debug != null && Debug.isOn("ssl")) {
+                System.out.println(Thread.currentThread().getName() +
+                    ", sequence number extremely close to overflow " +
+                    "(2^64-1 packets). Closing connection.");
+
+            }
+
+            fatal(Alerts.alert_handshake_failure, "sequence number overflow");
+        }
+
+        /*
+         * Ask for renegotiation when need to renew sequence number.
+         *
+         * Don't bother to kickstart the renegotiation when the local is
+         * asking for it.
+         */
+        if ((type != Record.ct_handshake) && authenticator.seqNumIsHuge()) {
             if (debug != null && Debug.isOn("ssl")) {
                 System.out.println(Thread.currentThread().getName() +
                         ", request renegotiation " +
@@ -1286,10 +1261,7 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
 
             startHandshake();
         }
-
-        return volume;
     }
-
 
     //
     // HANDSHAKE RELATED CODE
@@ -1356,7 +1328,6 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
         } else { // cs_DATA
             connectionState = cs_RENEGOTIATE;
         }
-
         if (roleIsServer) {
             handshaker = new ServerHandshaker(this, sslContext,
                     enabledProtocols, doClientAuth,
@@ -1371,12 +1342,8 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
                     secureRenegotiation, clientVerifyData, serverVerifyData);
             handshaker.setSNIServerNames(serverNames);
         }
-        handshaker.setMaximumPacketSize(maximumPacketSize);
         handshaker.setEnabledCipherSuites(enabledCipherSuites);
         handshaker.setEnableSessionCreation(enableSessionCreation);
-        handshaker.setApplicationProtocols(applicationProtocols);
-        handshaker.setApplicationProtocolSelectorSSLSocket(
-            applicationProtocolSelector);
     }
 
     /**
@@ -1394,12 +1361,29 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
                 kickstartHandshake();
 
                 /*
-                 * All initial handshaking goes through this operation
-                 * until we have a valid SSL connection.
+                 * All initial handshaking goes through this
+                 * InputRecord until we have a valid SSL connection.
+                 * Once initial handshaking is finished, AppInputStream's
+                 * InputRecord can handle any future renegotiation.
                  *
-                 * Handle handshake messages only, need no application data.
+                 * Keep this local so that it goes out of scope and is
+                 * eventually GC'd.
                  */
-                readRecord(false);
+                if (inrec == null) {
+                    inrec = new InputRecord();
+
+                    /*
+                     * Grab the characteristics already assigned to
+                     * AppInputStream's InputRecord.  Enable checking for
+                     * SSLv2 hellos on this first handshake.
+                     */
+                    inrec.setHandshakeHash(input.r.getHandshakeHash());
+                    inrec.setHelloVersion(input.r.getHelloVersion());
+                    inrec.enableFormatChecks();
+                }
+
+                readRecord(inrec, false);
+                inrec = null;
             }
         }
     }
@@ -1517,6 +1501,9 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
                 } else {
                     // we want to renegotiate, send hello request
                     handshaker.kickstart();
+                    // hello request is not included in the handshake
+                    // hashes, reset them
+                    handshaker.handshakeHash.reset();
                 }
             }
         }
@@ -1579,7 +1566,7 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
         }
     }
 
-    private void closeSocket() throws IOException {
+    protected void closeSocket() throws IOException {
 
         if ((debug != null) && Debug.isOn("ssl")) {
             System.out.println(Thread.currentThread().getName() +
@@ -1623,23 +1610,6 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
                                                     ", called close()");
         }
         closeInternal(true);  // caller is initiating close
-
-        // Clearup the resources.
-        try {
-            synchronized (readLock) {
-                inputRecord.close();
-            }
-
-            writeLock.lock();
-            try {
-                outputRecord.close();
-            } finally {
-                writeLock.unlock();
-            }
-        } catch (IOException ioe) {
-           // ignore
-        }
-
         setConnectionState(cs_APP_CLOSED);
     }
 
@@ -1763,17 +1733,19 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
                 // notify any threads waiting for the closing to finish
                 this.notifyAll();
             }
-
+            if (closeSocketCalled) {
+                // Dispose of ciphers since we've closed socket
+                disposeCiphers();
+            }
             if (cachedThrowable != null) {
                /*
                 * Rethrow the error to the calling method
                 * The Throwable caught can only be an Error or RuntimeException
                 */
-                if (cachedThrowable instanceof Error) {
-                    throw (Error)cachedThrowable;
-                } else if (cachedThrowable instanceof RuntimeException) {
-                    throw (RuntimeException)cachedThrowable;
-                }   // Otherwise, unlikely
+                if (cachedThrowable instanceof Error)
+                    throw (Error) cachedThrowable;
+                if (cachedThrowable instanceof RuntimeException)
+                    throw (RuntimeException) cachedThrowable;
             }
         }
     }
@@ -1797,14 +1769,19 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
 
             while (((state = getConnectionState()) != cs_CLOSED) &&
                    (state != cs_ERROR) && (state != cs_APP_CLOSED)) {
+                // create the InputRecord if it isn't initialized.
+                if (inrec == null) {
+                    inrec = new InputRecord();
+                }
 
                 // Ask for app data and then throw it away
                 try {
-                    readRecord(true);
+                    readRecord(inrec, true);
                 } catch (SocketTimeoutException e) {
                     // if time out, ignore the exception and continue
                 }
             }
+            inrec = null;
         } catch (IOException e) {
             if (debug != null && Debug.isOn("ssl")) {
                 System.out.println(Thread.currentThread().getName() +
@@ -1813,6 +1790,24 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
             if (rethrow) {
                 throw e; // pass exception up
             }
+        }
+    }
+
+    /**
+     * Called by closeInternal() only. Be sure to consider the
+     * synchronization locks carefully before calling it elsewhere.
+     */
+    private void disposeCiphers() {
+        // See comment in changeReadCiphers()
+        synchronized (readLock) {
+            readCipher.dispose();
+        }
+        // See comment in changeReadCiphers()
+        writeLock.lock();
+        try {
+            writeCipher.dispose();
+        } finally {
+            writeLock.unlock();
         }
     }
 
@@ -1848,7 +1843,7 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
      *          reserved for exceptions like timeout; otherwise, the socket
      *          will be closed, no further communications could be done.
      */
-    private synchronized void handleException(Exception e, boolean resumable)
+    synchronized private void handleException(Exception e, boolean resumable)
         throws IOException {
         if ((debug != null) && Debug.isOn("ssl")) {
             System.out.println(Thread.currentThread().getName() +
@@ -1877,7 +1872,7 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
 
         // need to perform error shutdown
         boolean isSSLException = (e instanceof SSLException);
-        if ((!isSSLException) && (e instanceof IOException)) {
+        if ((isSSLException == false) && (e instanceof IOException)) {
             // IOException from the socket
             // this means the TCP connection is already dead
             // we call fatal just to set the error status
@@ -1927,14 +1922,9 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
      */
     synchronized void fatal(byte description, String diagnostic,
             Throwable cause) throws IOException {
-
-        // Be care of deadlock. Please don't synchronize readLock.
-        try {
-            inputRecord.close();
-        } catch (IOException ioe) {
-            // ignore
+        if ((input != null) && (input.r != null)) {
+            input.r.close();
         }
-
         sess.invalidate();
         if (handshakeSession != null) {
             handshakeSession.invalidate();
@@ -1974,12 +1964,15 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
          * Clean up our side.
          */
         closeSocket();
+        // Another thread may have disposed the ciphers during closing
+        if (connectionState < cs_CLOSED) {
+            connectionState = (oldState == cs_APP_CLOSED) ? cs_APP_CLOSED
+                                                              : cs_CLOSED;
 
-        // Be care of deadlock. Please don't synchronize writeLock.
-        try {
-            outputRecord.close();
-        } catch (IOException ioe) {
-            // ignore
+            // We should lock readLock and writeLock if no deadlock risks.
+            // See comment in changeReadCiphers()
+            readCipher.dispose();
+            writeCipher.dispose();
         }
 
         throw closeReason;
@@ -1990,10 +1983,9 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
      * Process an incoming alert ... caller must already have synchronized
      * access to "this".
      */
-    private void recvAlert(ByteBuffer fragment) throws IOException {
-        byte level = fragment.get();
-        byte description = fragment.get();
-
+    private void recvAlert(InputRecord r) throws IOException {
+        byte level = (byte)r.read();
+        byte description = (byte)r.read();
         if (description == -1) { // check for short message
             fatal(Alerts.alert_illegal_parameter, "Short alert message");
         }
@@ -2056,13 +2048,13 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
 
         // For initial handshaking, don't send alert message to peer if
         // handshaker has not started.
-        //
-        // Shall we send an fatal alter to terminate the connection gracefully?
-        if (connectionState <= cs_HANDSHAKE &&
-                (handshaker == null || !handshaker.started() ||
-                        !handshaker.activated())) {
+        if (connectionState == cs_HANDSHAKE &&
+            (handshaker == null || !handshaker.started())) {
             return;
         }
+
+        OutputRecord r = new OutputRecord(Record.ct_alert);
+        r.setVersion(protocolVersion);
 
         boolean useDebug = debug != null && Debug.isOn("ssl");
         if (useDebug) {
@@ -2081,8 +2073,10 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
             }
         }
 
+        r.write(level);
+        r.write(description);
         try {
-            writeAlert(level, description);
+            writeRecord(r);
         } catch (IOException e) {
             if (useDebug) {
                 System.out.println(Thread.currentThread().getName() +
@@ -2095,10 +2089,61 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
     // VARIOUS OTHER METHODS
     //
 
+    /*
+     * When a connection finishes handshaking by enabling use of a newly
+     * negotiated session, each end learns about it in two halves (read,
+     * and write).  When both read and write ciphers have changed, and the
+     * last handshake message has been read, the connection has joined
+     * (rejoined) the new session.
+     *
+     * NOTE:  The SSLv3 spec is rather unclear on the concepts here.
+     * Sessions don't change once they're established (including cipher
+     * suite and master secret) but connections can join them (and leave
+     * them).  They're created by handshaking, though sometime handshaking
+     * causes connections to join up with pre-established sessions.
+     */
+    private void changeReadCiphers() throws SSLException {
+        if (connectionState != cs_HANDSHAKE
+                && connectionState != cs_RENEGOTIATE) {
+            throw new SSLProtocolException(
+                "State error, change cipher specs");
+        }
+
+        // ... create decompressor
+
+        CipherBox oldCipher = readCipher;
+
+        try {
+            readCipher = handshaker.newReadCipher();
+            readAuthenticator = handshaker.newReadAuthenticator();
+        } catch (GeneralSecurityException e) {
+            // "can't happen"
+            throw new SSLException("Algorithm missing:  ", e);
+        }
+
+        /*
+         * Dispose of any intermediate state in the underlying cipher.
+         * For PKCS11 ciphers, this will release any attached sessions,
+         * and thus make finalization faster.
+         *
+         * Since MAC's doFinal() is called for every SSL/TLS packet, it's
+         * not necessary to do the same with MAC's.
+         */
+        oldCipher.dispose();
+    }
+
     // used by Handshaker
-    void changeWriteCiphers() throws IOException {
-        Authenticator writeAuthenticator;
-        CipherBox writeCipher;
+    void changeWriteCiphers() throws SSLException {
+        if (connectionState != cs_HANDSHAKE
+                && connectionState != cs_RENEGOTIATE) {
+            throw new SSLProtocolException(
+                "State error, change cipher specs");
+        }
+
+        // ... create compressor
+
+        CipherBox oldCipher = writeCipher;
+
         try {
             writeCipher = handshaker.newWriteCipher();
             writeAuthenticator = handshaker.newWriteAuthenticator();
@@ -2106,7 +2151,12 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
             // "can't happen"
             throw new SSLException("Algorithm missing:  ", e);
         }
-        outputRecord.changeWriteCiphers(writeAuthenticator, writeCipher);
+
+        // See comment above.
+        oldCipher.dispose();
+
+        // reset the flag of the first application record
+        isFirstAppOutputRecord = true;
     }
 
     /*
@@ -2115,7 +2165,7 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
      */
     synchronized void setVersion(ProtocolVersion protocolVersion) {
         this.protocolVersion = protocolVersion;
-        outputRecord.setVersion(protocolVersion);
+        output.r.setVersion(protocolVersion);
     }
 
     //
@@ -2146,8 +2196,7 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
             return;
         }
 
-        JavaNetInetAddressAccess jna =
-                SharedSecrets.getJavaNetInetAddressAccess();
+        JavaNetAccess jna = SharedSecrets.getJavaNetAccess();
         String originalHostname = jna.getOriginalHostName(inetAddress);
         if ((originalHostname != null) &&
                 (originalHostname.length() != 0)) {
@@ -2158,7 +2207,7 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
                         Utilities.addToSNIServerNameList(serverNames, host);
 
                 if (!roleIsServer &&
-                        (handshaker != null) && !handshaker.activated()) {
+                        (handshaker != null) && !handshaker.started()) {
                     handshaker.setSNIServerNames(serverNames);
                 }
             }
@@ -2176,17 +2225,18 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
         }
     }
 
+
     // ONLY used by HttpsClient to setup the URI specified hostname
     //
     // Please NOTE that this method MUST be called before calling to
     // SSLSocket.setSSLParameters(). Otherwise, the {@code host} parameter
     // may override SNIHostName in the customized server name indication.
-    public synchronized void setHost(String host) {
+    synchronized public void setHost(String host) {
         this.host = host;
         this.serverNames =
             Utilities.addToSNIServerNameList(this.serverNames, this.host);
 
-        if (!roleIsServer && (handshaker != null) && !handshaker.activated()) {
+        if (!roleIsServer && (handshaker != null) && !handshaker.started()) {
             handshaker.setSNIServerNames(serverNames);
         }
     }
@@ -2197,7 +2247,7 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
      * transit, and will usually have been confidentiality protected.
      */
     @Override
-    public synchronized InputStream getInputStream() throws IOException {
+    synchronized public InputStream getInputStream() throws IOException {
         if (isClosed()) {
             throw new SocketException("Socket is closed");
         }
@@ -2219,7 +2269,7 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
      * will usually be confidentiality protected.
      */
     @Override
-    public synchronized OutputStream getOutputStream() throws IOException {
+    synchronized public OutputStream getOutputStream() throws IOException {
         if (isClosed()) {
             throw new SocketException("Socket is closed");
         }
@@ -2236,7 +2286,7 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
     }
 
     /**
-     * Returns the SSL Session in use by this connection.  These can
+     * Returns the the SSL Session in use by this connection.  These can
      * be long lived, and frequently correspond to an entire login session
      * for some user.
      */
@@ -2263,15 +2313,11 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
     }
 
     @Override
-    public synchronized SSLSession getHandshakeSession() {
+    synchronized public SSLSession getHandshakeSession() {
         return handshakeSession;
     }
 
     synchronized void setHandshakeSession(SSLSessionImpl session) {
-        // update the fragment size, which may be negotiated during handshaking
-        inputRecord.changeFragmentSize(session.getNegotiatedMaxFragSize());
-        outputRecord.changeFragmentSize(session.getNegotiatedMaxFragSize());
-
         handshakeSession = session;
     }
 
@@ -2284,7 +2330,7 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
      * we will need to wait for the next handshake.
      */
     @Override
-    public synchronized void setEnableSessionCreation(boolean flag) {
+    synchronized public void setEnableSessionCreation(boolean flag) {
         enableSessionCreation = flag;
 
         if ((handshaker != null) && !handshaker.activated()) {
@@ -2297,7 +2343,7 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
      * sessions.
      */
     @Override
-    public synchronized boolean getEnableSessionCreation() {
+    synchronized public boolean getEnableSessionCreation() {
         return enableSessionCreation;
     }
 
@@ -2311,9 +2357,9 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
      * we will need to wait for the next handshake.
      */
     @Override
-    public synchronized void setNeedClientAuth(boolean flag) {
-        doClientAuth = (flag ? ClientAuthType.CLIENT_AUTH_REQUIRED :
-                ClientAuthType.CLIENT_AUTH_NONE);
+    synchronized public void setNeedClientAuth(boolean flag) {
+        doClientAuth = (flag ?
+            SSLEngineImpl.clauth_required : SSLEngineImpl.clauth_none);
 
         if ((handshaker != null) &&
                 (handshaker instanceof ServerHandshaker) &&
@@ -2323,8 +2369,8 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
     }
 
     @Override
-    public synchronized boolean getNeedClientAuth() {
-        return (doClientAuth == ClientAuthType.CLIENT_AUTH_REQUIRED);
+    synchronized public boolean getNeedClientAuth() {
+        return (doClientAuth == SSLEngineImpl.clauth_required);
     }
 
     /**
@@ -2336,9 +2382,9 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
      * we will need to wait for the next handshake.
      */
     @Override
-    public synchronized void setWantClientAuth(boolean flag) {
-        doClientAuth = (flag ? ClientAuthType.CLIENT_AUTH_REQUESTED :
-                ClientAuthType.CLIENT_AUTH_NONE);
+    synchronized public void setWantClientAuth(boolean flag) {
+        doClientAuth = (flag ?
+            SSLEngineImpl.clauth_requested : SSLEngineImpl.clauth_none);
 
         if ((handshaker != null) &&
                 (handshaker instanceof ServerHandshaker) &&
@@ -2348,8 +2394,8 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
     }
 
     @Override
-    public synchronized boolean getWantClientAuth() {
-        return (doClientAuth == ClientAuthType.CLIENT_AUTH_REQUESTED);
+    synchronized public boolean getWantClientAuth() {
+        return (doClientAuth == SSLEngineImpl.clauth_requested);
     }
 
 
@@ -2360,28 +2406,19 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
      */
     @Override
     @SuppressWarnings("fallthrough")
-    public synchronized void setUseClientMode(boolean flag) {
+    synchronized public void setUseClientMode(boolean flag) {
         switch (connectionState) {
 
         case cs_START:
             /*
              * If we need to change the socket mode and the enabled
-             * protocols and cipher suites haven't specifically been
-             * set by the user, change them to the corresponding
-             * default ones.
+             * protocols haven't specifically been set by the user,
+             * change them to the corresponding default ones.
              */
-            if (roleIsServer != (!flag)) {
-                if (sslContext.isDefaultProtocolList(enabledProtocols)) {
-                    enabledProtocols =
-                            sslContext.getDefaultProtocolList(!flag);
-                }
-
-                if (sslContext.isDefaultCipherSuiteList(enabledCipherSuites)) {
-                    enabledCipherSuites =
-                            sslContext.getDefaultCipherSuiteList(!flag);
-                }
+            if (roleIsServer != (!flag) &&
+                    sslContext.isDefaultProtocolList(enabledProtocols)) {
+                enabledProtocols = sslContext.getDefaultProtocolList(!flag);
             }
-
             roleIsServer = !flag;
             break;
 
@@ -2397,23 +2434,13 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
             if (!handshaker.activated()) {
                 /*
                  * If we need to change the socket mode and the enabled
-                 * protocols and cipher suites haven't specifically been
-                 * set by the user, change them to the corresponding
-                 * default ones.
+                 * protocols haven't specifically been set by the user,
+                 * change them to the corresponding default ones.
                  */
-                if (roleIsServer != (!flag)) {
-                    if (sslContext.isDefaultProtocolList(enabledProtocols)) {
-                        enabledProtocols =
-                                sslContext.getDefaultProtocolList(!flag);
-                    }
-
-                    if (sslContext.isDefaultCipherSuiteList(
-                                                    enabledCipherSuites)) {
-                        enabledCipherSuites =
-                            sslContext.getDefaultCipherSuiteList(!flag);
-                    }
+                if (roleIsServer != (!flag) &&
+                        sslContext.isDefaultProtocolList(enabledProtocols)) {
+                    enabledProtocols = sslContext.getDefaultProtocolList(!flag);
                 }
-
                 roleIsServer = !flag;
                 connectionState = cs_START;
                 initHandshaker();
@@ -2434,7 +2461,7 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
     }
 
     @Override
-    public synchronized boolean getUseClientMode() {
+    synchronized public boolean getUseClientMode() {
         return !roleIsServer;
     }
 
@@ -2464,7 +2491,7 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
      * @param suites Names of all the cipher suites to enable.
      */
     @Override
-    public synchronized void setEnabledCipherSuites(String[] suites) {
+    synchronized public void setEnabledCipherSuites(String[] suites) {
         enabledCipherSuites = new CipherSuiteList(suites);
         if ((handshaker != null) && !handshaker.activated()) {
             handshaker.setEnabledCipherSuites(enabledCipherSuites);
@@ -2482,7 +2509,7 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
      * @return an array of cipher suite names
      */
     @Override
-    public synchronized String[] getEnabledCipherSuites() {
+    synchronized public String[] getEnabledCipherSuites() {
         return enabledCipherSuites.toStringArray();
     }
 
@@ -2507,7 +2534,7 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
      *  named by the parameter is not supported.
      */
     @Override
-    public synchronized void setEnabledProtocols(String[] protocols) {
+    synchronized public void setEnabledProtocols(String[] protocols) {
         enabledProtocols = new ProtocolList(protocols);
         if ((handshaker != null) && !handshaker.activated()) {
             handshaker.setEnabledProtocols(enabledProtocols);
@@ -2515,7 +2542,7 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
     }
 
     @Override
-    public synchronized String[] getEnabledProtocols() {
+    synchronized public String[] getEnabledProtocols() {
         return enabledProtocols.toStringArray();
     }
 
@@ -2572,7 +2599,7 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
      * Returns the SSLParameters in effect for this SSLSocket.
      */
     @Override
-    public synchronized SSLParameters getSSLParameters() {
+    synchronized public SSLParameters getSSLParameters() {
         SSLParameters params = super.getSSLParameters();
 
         // the super implementation does not handle the following parameters
@@ -2594,10 +2621,6 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
         }
 
         params.setUseCipherSuitesOrder(preferLocalCipherSuites);
-        params.setMaximumPacketSize(maximumPacketSize);
-        params.setApplicationProtocols(applicationProtocols);
-
-        // DTLS handshake retransmissions parameter does not apply here.
 
         return params;
     }
@@ -2606,23 +2629,13 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
      * Applies SSLParameters to this socket.
      */
     @Override
-    public synchronized void setSSLParameters(SSLParameters params) {
+    synchronized public void setSSLParameters(SSLParameters params) {
         super.setSSLParameters(params);
 
         // the super implementation does not handle the following parameters
         identificationProtocol = params.getEndpointIdentificationAlgorithm();
         algorithmConstraints = params.getAlgorithmConstraints();
         preferLocalCipherSuites = params.getUseCipherSuitesOrder();
-        maximumPacketSize = params.getMaximumPacketSize();
-
-        // DTLS handshake retransmissions parameter does not apply here.
-
-        if (maximumPacketSize != 0) {
-            outputRecord.changePacketSize(maximumPacketSize);
-        } else {
-            // use the implicit maximum packet size.
-            maximumPacketSize = outputRecord.getMaxPacketSize();
-        }
 
         List<SNIServerName> sniNames = params.getServerNames();
         if (sniNames != null) {
@@ -2636,13 +2649,9 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
             sniMatchers = matchers;
         }
 
-        applicationProtocols = params.getApplicationProtocols();
-
-        if ((handshaker != null) && !handshaker.activated()) {
+        if ((handshaker != null) && !handshaker.started()) {
             handshaker.setIdentificationProtocol(identificationProtocol);
             handshaker.setAlgorithmConstraints(algorithmConstraints);
-            handshaker.setMaximumPacketSize(maximumPacketSize);
-            handshaker.setApplicationProtocols(applicationProtocols);
             if (roleIsServer) {
                 handshaker.setSNIMatchers(sniMatchers);
                 handshaker.setUseCipherSuitesOrder(preferLocalCipherSuites);
@@ -2652,32 +2661,12 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
         }
     }
 
-    @Override
-    public synchronized String getApplicationProtocol() {
-        return applicationProtocol;
-    }
-
-    @Override
-    public synchronized String getHandshakeApplicationProtocol() {
-        if ((handshaker != null) && handshaker.started()) {
-            return handshaker.getHandshakeApplicationProtocol();
-        }
-        return null;
-    }
-
-    @Override
-    public synchronized void setHandshakeApplicationProtocolSelector(
-        BiFunction<SSLSocket, List<String>, String> selector) {
-        applicationProtocolSelector = selector;
-        if ((handshaker != null) && !handshaker.activated()) {
-            handshaker.setApplicationProtocolSelectorSSLSocket(selector);
-        }
-    }
-
-    @Override
-    public synchronized BiFunction<SSLSocket, List<String>, String>
-        getHandshakeApplicationProtocolSelector() {
-        return this.applicationProtocolSelector;
+    /*
+     * Returns a boolean indicating whether the ChangeCipherSpec message
+     * has been received for this handshake.
+     */
+    boolean receivedChangeCipherSpec() {
+        return receivedCCS;
     }
 
     //
@@ -2685,16 +2674,17 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
     // events.  This ensures that the notifications don't block the
     // protocol state machine.
     //
-    private static class NotifyHandshake implements Runnable {
+    private static class NotifyHandshakeThread extends Thread {
 
         private Set<Map.Entry<HandshakeCompletedListener,AccessControlContext>>
                 targets;        // who gets notified
         private HandshakeCompletedEvent event;          // the notification
 
-        NotifyHandshake(
+        NotifyHandshakeThread(
             Set<Map.Entry<HandshakeCompletedListener,AccessControlContext>>
             entrySet, HandshakeCompletedEvent e) {
 
+            super("HandshakeCompletedNotify-Thread");
             targets = new HashSet<>(entrySet);          // clone the entry set
             event = e;
         }
@@ -2723,7 +2713,7 @@ public final class SSLSocketImpl extends BaseSSLSocketImpl {
      */
     @Override
     public String toString() {
-        StringBuilder retval = new StringBuilder(80);
+        StringBuffer retval = new StringBuffer(80);
 
         retval.append(Integer.toHexString(hashCode()));
         retval.append("[");
